--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -164,7 +164,7 @@ $grid-width: 114rem;
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(72,72,72,1);
+    background: #4bffd4;
     -webkit-transform: translate3d(0,0%,0);
             transform: translate3d(0,0%,0);
     opacity: 1;
@@ -664,7 +664,7 @@ $grid-width: 114rem;
 } */
   
   header {
-  background-color: #000;
+  background-color: #26222e;
   margin: 0px;
   overflow: hidden;
 }
@@ -686,8 +686,9 @@ $grid-width: 114rem;
   
   .header {
   z-index: 30;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  opacity: 0;
 }
   
   .glcanvas-wrap {
@@ -881,22 +882,6 @@ $grid-width: 114rem;
     animation: bounce 2s infinite;
 }
   
-  /* #scroll-wrap {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    transform: translateY(-50%);
-    color: #fff;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: center;
-    justify-content: center;
-    background-image: url('../../../../static/media/img/scroll-down.svg');
-    width: 10rem;
-    height: 10rem;
-  } */
-  
   html {
   -webkit-text-size-adjust: none;
   -webkit-font-smoothing: subpixel-antialiased;
@@ -917,7 +902,7 @@ $grid-width: 114rem;
   position: relative;
   -webkit-box-shadow: 0 4px 2px -2px rgba(255,255,255,0.2);
           box-shadow: 0 4px 2px -2px rgba(255,255,255,0.2);
-  background-color: rgba(52,52,52,0.9);
+  background-color: #292a2b;
   height: 100%;
   max-width: 100%;
   z-index: 1;
