--- a/src/static/style/css/app/common/_sail.css
+++ b/src/static/style/css/app/common/_sail.css
@@ -6,7 +6,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #4bffd4;
+    background: #26222e;
     transform: translate3d(0,0%,0);
     opacity: 1;
 }
