--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -901,7 +901,8 @@ $grid-width: 114rem;
   position: relative;
   -webkit-box-shadow: 0 4px 2px -2px rgba(255,255,255,0.2);
           box-shadow: 0 4px 2px -2px rgba(255,255,255,0.2);
-  background-color: #292a2b;
+  /* background-color: #292a2b; */
+  background-color: #1b1b1b;
   height: 100%;
   max-width: 100%;
   z-index: 1;
@@ -4575,19 +4576,22 @@ a:hover {
 }
   
   .h-img-wrap {
-  position: absolute;
+  /* position: absolute;
   z-index: -1;
   display: -ms-flexbox;
-  display: -webkit-box;
   display: flex;
   -ms-flex-align: center;
-  -webkit-box-align: center;
-          align-items: center;
+  align-items: center;
   -ms-flex-pack: center;
-  -webkit-box-pack: center;
-          justify-content: center;
+  justify-content: center;
   background-size: cover;
-  background-position: 50%;
+  background-position: 50%; */
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: -1; 
   opacity: .2;
 }
   
@@ -4599,7 +4603,7 @@ a:hover {
   
   #h-img-wrap-0 {
   /* bottom: -11vw; */
-  left: 40vw;
+  /* left: 40vw; */
   /* transform: translate3d(0, -46%, 0); */
 }
   
