--- a/src/static/style/css/app/page/_skylake.css
+++ b/src/static/style/css/app/page/_skylake.css
@@ -60,6 +60,7 @@ li {
 
 p {
   margin: 0 auto;
+  font-family: 'Georgia', sans-serif;
 }
 
 /* Hide the overflow in IE. */
@@ -3198,7 +3199,8 @@ svg:not(:root) {
   bottom: calc(9px + 1.9vw);
   left: -3px;
   width: 41.66vw;
-  font-family: GinesoBold;
+  font-family: FuturaStd-ExtraBold;
+  text-transform: uppercase;
   line-height: 120%;
   letter-spacing: -1px;
   font-size: calc(1.1rem + 4.24vw);
@@ -3208,7 +3210,7 @@ svg:not(:root) {
 
 .h-txt-title {
   position: absolute;
-  top: 0;
+  top: 20px;
   left: 0;
   transform: translate3d(0, 100%, 0);
 
