tidy up h-pagi-no colors and h-client colors, pt.C

--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -3252,7 +3252,7 @@ a:hover {
   #h-pagi-line {
   left: 0;
   right: 0;
-  background: rgb(25, 25, 25);
+  background: rgba(255, 255, 255, .2);
   -webkit-transform: translate3d(-130%, 0, 0);
           transform: translate3d(-130%, 0, 0);
 }
@@ -3300,14 +3300,14 @@ a:hover {
 }
   
   .h-pagi-top-no {
-  color: rgba(12, 12, 12, .3);
+  color: rgba(255, 255, 255, .3);
   opacity: 1;
 }
   
   #h-pagi-bottom-marker {
   -webkit-transform: translate3d(0, 100%, 0);
           transform: translate3d(0, 100%, 0);
-  color: rgba(12, 12, 12, .3);
+  color: rgba(255, 255, 255, .3);
 }
   
   #h-pagi-bottom {
@@ -4290,15 +4290,15 @@ a:hover {
 }
   
   #h-client-1 {
-  color: #00a1de;
+  color: #ff5454;
 }
   
   #h-client-2 {
-  color: #eb1c3b;
+  color: #40a171;
 }
   
   #h-client-3 {
-  color: #148b1f;
+  color: #7fc0fd;
 }
   
   #h-txt {
