--- a/src/static/style/css/app/lib/_loading-animation.css
+++ b/src/static/style/css/app/lib/_loading-animation.css
@@ -1,6 +1,6 @@
 #loader-line-wrap {
   position: fixed;
-  top: 0;
+  top: 50%;
   left: 0;
   right: 0;
   bottom: 0;
@@ -11,7 +11,7 @@
 }
 
 .loader-line {
-  height: 100vh;
+  height: 5px;
   background: -webkit-linear-gradient( 45deg, #ff3000, #ed0200, #ff096c, #ff1f44, #d50082 );
   /* background-image: linear-gradient(to right top, #91e6c7, #65dbd5, #3dcee3, #33bfee, #55acef); */
   transform: translate3d(-100%, 0, 0);
