--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -6479,8 +6479,12 @@ a:hover {
   }
 
   #h-client-wrap {
-    top: 57px;
-    left: calc(2.1vw + 70px);
+    /* top: 57px;
+    left: calc(2.1vw + 70px); */
+    top: -44px;
+    left: -172px;
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
   }
 
   .h-client {
