reposition section title and text and pagi-line, pt.B

--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -4322,7 +4322,8 @@ a:hover {
   
   #h-txt-desc-line-wrap {
   position: absolute;
-  top: 0;
+  top: 62px;
+  left: 25vw;
   width: 6.77vw;
   height: 4px;
 }
@@ -4341,8 +4342,8 @@ a:hover {
   
   #h-txt-title-wrap {
   position: absolute;
-  bottom: calc(9px + 1.9vw);
-  left: -3px;
+  bottom: calc(15px + -2.1vw);
+  left: 499px;
   width: 41.66vw;
   font-family: FuturaStd-ExtraBold;
   text-transform: uppercase;
@@ -4366,8 +4367,8 @@ a:hover {
   
   .h-text-desc-txt-wrap {
   position: absolute;
-  top: calc(-5px - 0.55vw);
-  left: 8.33vw;
+  top: calc(2px - -3.45vw);
+  left: 32.33vw;
   width: 33.33vw;
 }
   
