--- a/src/static/style/css/app/page/_skylake.css
+++ b/src/static/style/css/app/page/_skylake.css
@@ -3261,23 +3261,23 @@ svg:not(:root) {
 }
 
 #h-role {
-  left: 8.33vw;
+  left: 41vw;
 }
 
 #h-agency,
 #h-role {
   position: absolute;
-  bottom: 7.8vw;
+  top: 3.8vw;
 }
 
 #h-agency {
-  left: 16.66vw;
+  left: 49.555vw;
 }
 
 #h-year {
   position: absolute;
-  bottom: 7.8vw;
-  left: 25vw;
+  top: 3.8vw;
+  left: 58vw;
 }
 
 #h-btn-container {
