--- a/src/static/style/css/app/page/_skylake.css
+++ b/src/static/style/css/app/page/_skylake.css
@@ -2127,12 +2127,12 @@ svg:not(:root) {
 #h-pagi-line-container {
   position: absolute;
   z-index: 3;
-  top: 50%;
-  right: 5%;
+  top: 62%;
+  right: 0%;
   height: 1px;
   text-align: center;
   font-family: trump-gothic-pro;
-  font-size: calc(1rem + 17.2vw);
+  font-size: calc(1rem + 1.2vw);
 }
 
 #h-pagi-line-wrap {
@@ -2166,7 +2166,9 @@ svg:not(:root) {
   bottom: -28px;
   left: 0;
   width: 100%;
+
 }
+
 
 .h-pagi-top-no-wrap,
 .h-pagi-top-title-wrap {
@@ -2176,6 +2178,8 @@ svg:not(:root) {
 .h-pagi-top-no-wrap {
   margin: auto;
   width: 81px;
+  transform: rotate(-90deg) !important;
+  
 }
 
 .h-pagi-top-title-wrap {
@@ -2204,6 +2208,9 @@ svg:not(:root) {
 #h-pagi-bottom-marker {
   transform: translate3d(0, 100%, 0);
   color: rgba(255, 255, 255, .3);
+  right: 40px !important;
+  bottom: 5vw !important;
+  transform: rotate(-90deg) !important;
 }
 
 #h-pagi-bottom {
@@ -2235,7 +2242,7 @@ svg:not(:root) {
 
 #h-pagi-bottom-marker-wrap {
   position: absolute;
-  top: 0;
+  top: -145px;  
   width: 81px;
   transform: translate3d(0, 0, 0);
 }
