position pagi-line, pt.F

--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -3245,7 +3245,9 @@ a:hover {
 }
   
   #h-pagi-line-wrap {
-  width: 50px;
+  width: 116px;
+  -webkit-transform: translate3d(18px, -40px, 0) rotate(-90deg);
+          transform: translate3d(18px, -40px, 0) rotate(-90deg);
 }
   
   #h-pagi-line,
@@ -3253,16 +3255,13 @@ a:hover {
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 20px !important;
-  width: 80px !important;
+  left: -10px !important;
 }
   
   #h-pagi-line {
   left: 0;
   right: 0;
   background: rgba(255, 255, 255, .2);
-  -webkit-transform: translate3d(-130%, 0, 0);
-          transform: translate3d(-130%, 0, 0);
 }
   
   #h-pagi-top {
