--- a/src/static/style/css/app/page/_skylake.css
+++ b/src/static/style/css/app/page/_skylake.css
@@ -3431,13 +3431,14 @@ svg:not(:root) {
   width: 100%;
   height: 100%;
   top: 0px;
-  left: 0px;
-  z-index: -1; 
+  left: -745px;
+  z-index: -1;
   opacity: .12;
+  transform: rotate(-90deg);
 }
 
 .h-img {
-  transform: translate3d(0, 100%, 0);
+  transform: translate3d(-60%, 0, 0);
   opacity: 0;
 }
 
