implement h-pagi-bottom-marker animate in, pt.I

--- a/src/static/style/css/app/lib/_loading-animation.css
+++ b/src/static/style/css/app/lib/_loading-animation.css
@@ -12,7 +12,7 @@
 
 .loader-line {
   height: 5px;
-  background: -webkit-linear-gradient( 45deg, #ff3000, #ed0200, #ff096c, #ff1f44, #d50082 );
+  background: -webkit-linear-gradient( 45deg, #0278d8, #ed0200, #ff096c, #ff1f44, #d50082 );
   /* background-image: linear-gradient(to right top, #91e6c7, #65dbd5, #3dcee3, #33bfee, #55acef); */
   transform: translate3d(-100%, 0, 0);
   /* transform: translate3d(0%, 0, 0); */
