--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -511,7 +511,7 @@ $grid-width: 114rem;
   
   .loader-line {
   height: 5px;
-  background: -webkit-linear-gradient( 45deg, #ff3000, #ed0200, #ff096c, #ff1f44, #d50082 );
+  background: -webkit-linear-gradient( 45deg, #0278d8, #ed0200, #ff096c, #ff1f44, #d50082 );
   /* background-image: linear-gradient(to right top, #91e6c7, #65dbd5, #3dcee3, #33bfee, #55acef); */
   -webkit-transform: translate3d(-100%, 0, 0);
           transform: translate3d(-100%, 0, 0);
@@ -3316,13 +3316,11 @@ a:hover {
 }
   
   #h-pagi-bottom-marker {
-  -webkit-transform: translate3d(0, 100%, 0);
-          transform: translate3d(0, 100%, 0);
   color: rgba(255, 255, 255, .3);
   right: 40px !important;
   bottom: 5vw !important;
-  -webkit-transform: rotate(-90deg) !important;
-          transform: rotate(-90deg) !important;
+  -webkit-transform: translate3d(0, 100%, 0);
+          transform: translate3d(0, 100%, 0);
 }
   
   #h-pagi-bottom {
@@ -3355,9 +3353,9 @@ a:hover {
   #h-pagi-bottom-marker-wrap {
   position: absolute;
   top: -145px;  
-  width: 81px;
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
+  width: 40px;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
 }
   
   .h-pagi-bottom-title-wrap {
@@ -6485,7 +6483,7 @@ a:hover {
   #h-pagi-bottom-marker-wrap,
   #h-pagi-line-wrap,
   #h-pagi-social-wrap {
-    left: 29px;
+    left: 48px;
   }
 
   #h-client-wrap {
