--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -3248,6 +3248,8 @@ a:hover {
   width: 116px;
   -webkit-transform: translate3d(17.5px, -46px, 0) rotate(-90deg);
           transform: translate3d(17.5px, -46px, 0) rotate(-90deg);
+  -webkit-transform-origin: center;
+          transform-origin: center;
 }
   
   #h-pagi-line,
@@ -3262,6 +3264,8 @@ a:hover {
   left: 0;
   right: 0;
   background: rgba(255, 255, 255, .2);
+  -webkit-transform: translate3d(-100, 0, 0);
+          transform: translate3d(-100, 0, 0);
 }
   
   #h-pagi-top {
