implement pagi-no animate in and headerDown animate out, pt.L

--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -3266,7 +3266,7 @@ a:hover {
   background: rgba(255, 255, 255, .2);
   -webkit-transform: translate3d(-100, 0, 0);
           transform: translate3d(-100, 0, 0);
-
+  opacity: 0;
 }
   
   #h-pagi-top {
