--- a/src/static/style/css/app/page/_skylake.css
+++ b/src/static/style/css/app/page/_skylake.css
@@ -2154,7 +2154,7 @@ svg:not(:root) {
   right: 0;
   background: rgba(255, 255, 255, .2);
   transform: translate3d(-100, 0, 0);
-
+  opacity: 0;
 }
 
 #h-pagi-top {
