--- a/src/static/style/css/app/page/_skylake.css
+++ b/src/static/style/css/app/page/_skylake.css
@@ -3420,6 +3420,30 @@ svg:not(:root) {
   color: #fff;
 }
 
+#gloss-overlay {
+  background: inherit;
+  width: 8vw;
+  height: 100vh;
+  z-index: 0;
+  position: absolute;
+  overflow: hidden;  
+ }
+
+ #gloss-overlay:before {
+  content: "";
+  width: 8vw;
+  height: 100vh;
+  background: inherit; 
+  position: absolute;
+  left: 0px;  
+  right: 0;
+  top: 0px;   
+  bottom: 0;
+  box-shadow: inset 0 0 0 200px rgba(255,255,255,0.3);
+  filter: blur(10px);
+  opacity: .5;
+ }
+
 .h-img-wrap {
   /* position: absolute;
   z-index: -1;
