--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -4594,30 +4594,70 @@ a:hover {
 }
   
   #gloss-overlay {
-  background: inherit;
-  width: 8vw;
-  height: 100vh;
-  z-index: 0;
-  position: absolute;
-  overflow: hidden;  
+    background: inherit;
+    width: 8vw;
+    height: 100vh;
+    z-index: -1;
+    position: absolute;
+    overflow: hidden; 
+
  }
   
   #gloss-overlay:before {
-  content: "";
-  width: 8vw;
-  height: 100vh;
-  background: inherit; 
-  position: absolute;
-  left: 0px;  
-  right: 0;
-  top: 0px;   
-  bottom: 0;
-  -webkit-box-shadow: inset 0 0 0 200px rgba(255,255,255,0.3);
-          box-shadow: inset 0 0 0 200px rgba(255,255,255,0.3);
-  -webkit-filter: blur(10px);
-          filter: blur(10px);
-  opacity: .5;
+    content: "";
+    width: 8vw;
+    height: 100vh;
+    background: inherit; 
+    position: absolute;
+    left: 0px;  
+    right: 0;
+    top: 0px;   
+    bottom: 0;
+    -webkit-box-shadow: inset 0 0 0 200px rgba(255,255,255,0.3);
+            box-shadow: inset 0 0 0 200px rgba(255,255,255,0.3);
+    -webkit-filter: blur(10px);
+            filter: blur(10px);
+    opacity: .5;
+
  }
+  
+  #h-pagi-progress {
+    position: absolute;
+    bottom: 0;
+    left: 14.5vw;
+    height: 13vh;
+    width: 21vw;
+    background: rgba(27, 27, 27, .2);
+    z-index: 0;
+ }
+  
+  .h-pagi-prog-no-wrap {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+
+}
+  
+  .h-pagi-prog-no {
+  
+}
+  
+  .progress-container{
+  position: absolute;
+  bottom: 50%;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background: gray;
+}
+  
+  .progress{
+  height: 4px;
+  background: red;
+  width: 0;
+  -webkit-transition: width 0.5s;
+  transition: width 0.5s;
+}
   
   .h-img-wrap {
   /* position: absolute;
