--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -910,8 +910,9 @@ $grid-width: 114rem;
   position: relative;
   -webkit-box-shadow: 0 4px 2px -2px rgba(255,255,255,0.2);
           box-shadow: 0 4px 2px -2px rgba(255,255,255,0.2);
-  /* background-color: #292a2b; */
-  background-color: #1b1b1b;
+  background-color: #292a2b;
+  /* background-color: #1b1b1b; */
+  /* background-color: #fff; */
   height: 100%;
   max-width: 100%;
   z-index: 1;
@@ -4668,7 +4669,8 @@ a:hover {
   
   .progress{
   height: 4px;
-  background: red;
+  /* background: red; */
+  background: -webkit-linear-gradient( 45deg, #0278d8, #ed0200, #ff096c, #ff1f44, #d50082 );
   width: 0;
   -webkit-transition: width 0.5s;
   transition: width 0.5s;
