--- a/src/static/style/css/app/page/_skylake.css
+++ b/src/static/style/css/app/page/_skylake.css
@@ -17,8 +17,9 @@ html {
 #body-content-wrapper {
   position: relative;
   box-shadow: 0 4px 2px -2px rgba(255,255,255,0.2);
-  /* background-color: #292a2b; */
-  background-color: #1b1b1b;
+  background-color: #292a2b;
+  /* background-color: #1b1b1b; */
+  /* background-color: #fff; */
   height: 100%;
   max-width: 100%;
   z-index: 1;
@@ -3489,7 +3490,8 @@ svg:not(:root) {
 }
 .progress{
   height: 4px;
-  background: red;
+  /* background: red; */
+  background: -webkit-linear-gradient( 45deg, #0278d8, #ed0200, #ff096c, #ff1f44, #d50082 );
   width: 0;
   transition: width 0.5s;
 }
