--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -4629,7 +4629,7 @@ a:hover {
     left: 14.5vw;
     height: 13vh;
     width: 21vw;
-    background: rgba(27, 27, 27, .2);
+    background: rgba(27, 27, 27, 1);
     z-index: 0;
     -webkit-transform: translate3d(0, 100%, 0);
             transform: translate3d(0, 100%, 0);
@@ -4640,7 +4640,7 @@ a:hover {
   z-index: 0;
   height: 100%;
   width: 100%;
-  top: 6%;
+  top: 8%;
   left: 5%;
   /* text-align: center; */
   font-family: trump-gothic-pro;
@@ -4660,15 +4660,16 @@ a:hover {
   
   .progress-container{
   position: absolute;
-  bottom: 50%;
-  left: 35%;
+  bottom: 45%;
+  left: 36%;
   width: 50%;
-  height: 4px;
+  height: 3.5px;
   background: gray;
+  border-radius: 5px;
 }
   
   .progress{
-  height: 4px;
+  height: 3.5px;
   /* background: red; */
   background: -webkit-linear-gradient( 45deg, #0278d8, #ed0200, #ff096c, #ff1f44, #d50082 );
   width: 0;
