--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -910,9 +910,9 @@ $grid-width: 114rem;
   position: relative;
   -webkit-box-shadow: 0 4px 2px -2px rgba(255,255,255,0.2);
           box-shadow: 0 4px 2px -2px rgba(255,255,255,0.2);
-  background-color: #292a2b;
+  /* background-color: #292a2b; */
   /* background-color: #1b1b1b; */
-  /* background-color: #fff; */
+  background-color: #fff;
   height: 100%;
   max-width: 100%;
   z-index: 1;
@@ -3264,7 +3264,9 @@ a:hover {
   #h-pagi-line {
   left: 0;
   right: 0;
-  background: rgba(255, 255, 255, .2);
+  /* background: rgba(255, 255, 255, .2); */
+  /* background: #89898A; */
+  background: #1e1e20;
   -webkit-transform: translate3d(-100, 0, 0);
           transform: translate3d(-100, 0, 0);
   opacity: 0;
@@ -3317,13 +3319,15 @@ a:hover {
 }
   
   .h-pagi-top-no {
-  color: rgba(255, 255, 255, .3);
+  /* color: rgba(255, 255, 255, .3); */
+  color: #1e1e20;
   opacity: 1;
 
 }
   
   #h-pagi-bottom-marker {
-  color: rgba(255, 255, 255, .3);
+  /* color: rgba(255, 255, 255, .3); */
+  color: #1e1e20;
   right: 40px !important;
   bottom: 5vw !important;
   -webkit-transform: translate3d(0, 100%, 0);
@@ -4348,7 +4352,8 @@ a:hover {
   right: 0;
   bottom: 0;
   /* background: #3d3560; */
-  background: #e8e8e8;
+  /* background: #e8e8e8; */
+  background: -webkit-linear-gradient( 45deg, #0278d8, #ed0200, #ff096c, #ff1f44, #d50082 );
   -webkit-transform: translate3d(-110%, 0, 0);
           transform: translate3d(-110%, 0, 0);
 }
@@ -4363,7 +4368,8 @@ a:hover {
   line-height: 120%;
   letter-spacing: -1px;
   font-size: calc(1.1rem + 3.74vw);
-  color: #e8e8e8;
+  /* color: #e8e8e8; */
+  color: #1e1e20;
   
 }
   
@@ -4389,7 +4395,8 @@ a:hover {
   /* position: absolute; */
   line-height: 180%;
   /* color: #a3adb9; */
-  color: #e8e8e8;
+  /* color: #e8e8e8; */
+  color: #89898A;
   font-size: calc(0.4rem + 0.718vw);
   -webkit-transform: translate3d(0, 100%, 0);
           transform: translate3d(0, 100%, 0);
@@ -4401,7 +4408,8 @@ a:hover {
   .h-bottom-title {
   font-family: trump-gothic-pro;
   /* color: #181829; */
-  color: #e8e8e8;
+  /* color: #e8e8e8; */
+  color: #1e1e20;
   letter-spacing: 1.6px;
   font-size: calc(0.4rem + 0.5vw);
   -webkit-transform: translate3d(0, 100%, 0);
@@ -4419,7 +4427,8 @@ a:hover {
   position: absolute;
   top: 0;
   left: 0;
-  color: #a3adb9;
+  /* color: #a3adb9; */
+  color: #89898A;
   line-height: 150%;
   -webkit-transform: translate3d(0, 100%, 0);
           transform: translate3d(0, 100%, 0);
