--- a/src/static/style/css/app/page/_skylake.css
+++ b/src/static/style/css/app/page/_skylake.css
@@ -17,9 +17,9 @@ html {
 #body-content-wrapper {
   position: relative;
   box-shadow: 0 4px 2px -2px rgba(255,255,255,0.2);
-  background-color: #292a2b;
+  /* background-color: #292a2b; */
   /* background-color: #1b1b1b; */
-  /* background-color: #fff; */
+  background-color: #fff;
   height: 100%;
   max-width: 100%;
   z-index: 1;
@@ -2153,7 +2153,9 @@ svg:not(:root) {
 #h-pagi-line {
   left: 0;
   right: 0;
-  background: rgba(255, 255, 255, .2);
+  /* background: rgba(255, 255, 255, .2); */
+  /* background: #89898A; */
+  background: #1e1e20;
   transform: translate3d(-100, 0, 0);
   opacity: 0;
 }
@@ -2204,13 +2206,15 @@ svg:not(:root) {
 }
 
 .h-pagi-top-no {
-  color: rgba(255, 255, 255, .3);
+  /* color: rgba(255, 255, 255, .3); */
+  color: #1e1e20;
   opacity: 1;
 
 }
 
 #h-pagi-bottom-marker {
-  color: rgba(255, 255, 255, .3);
+  /* color: rgba(255, 255, 255, .3); */
+  color: #1e1e20;
   right: 40px !important;
   bottom: 5vw !important;
   transform: translate3d(0, 100%, 0);
@@ -3196,7 +3200,8 @@ svg:not(:root) {
   right: 0;
   bottom: 0;
   /* background: #3d3560; */
-  background: #e8e8e8;
+  /* background: #e8e8e8; */
+  background: -webkit-linear-gradient( 45deg, #0278d8, #ed0200, #ff096c, #ff1f44, #d50082 );
   transform: translate3d(-110%, 0, 0);
 }
 
@@ -3210,7 +3215,8 @@ svg:not(:root) {
   line-height: 120%;
   letter-spacing: -1px;
   font-size: calc(1.1rem + 3.74vw);
-  color: #e8e8e8;
+  /* color: #e8e8e8; */
+  color: #1e1e20;
   
 }
 
@@ -3235,7 +3241,8 @@ svg:not(:root) {
   /* position: absolute; */
   line-height: 180%;
   /* color: #a3adb9; */
-  color: #e8e8e8;
+  /* color: #e8e8e8; */
+  color: #89898A;
   font-size: calc(0.4rem + 0.718vw);
   transform: translate3d(0, 100%, 0);
 
@@ -3246,7 +3253,8 @@ svg:not(:root) {
 .h-bottom-title {
   font-family: trump-gothic-pro;
   /* color: #181829; */
-  color: #e8e8e8;
+  /* color: #e8e8e8; */
+  color: #1e1e20;
   letter-spacing: 1.6px;
   font-size: calc(0.4rem + 0.5vw);
   transform: translate3d(0, 100%, 0);
@@ -3263,7 +3271,8 @@ svg:not(:root) {
   position: absolute;
   top: 0;
   left: 0;
-  color: #a3adb9;
+  /* color: #a3adb9; */
+  color: #89898A;
   line-height: 150%;
   transform: translate3d(0, 100%, 0);
   
