resize h-pagi-prog component and change bckgrd image opacity, pt.E

--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -4636,8 +4636,8 @@ a:hover {
     position: absolute;
     bottom: 0;
     left: 14.5vw;
-    height: 13vh;
-    width: 21vw;
+    height: 18vh;
+    width: 26.3vw;
     background: rgba(27, 27, 27, 1);
     z-index: 0;
     -webkit-transform: translate3d(0, 100%, 0);
@@ -4647,9 +4647,9 @@ a:hover {
   .h-pagi-prog-no-wrap {
   position: absolute;
   z-index: 0;
-  height: 100%;
+  height: 75%;
   width: 100%;
-  top: 8%;
+  top: 15%;
   left: 5%;
   /* text-align: center; */
   font-family: trump-gothic-pro;
@@ -4702,14 +4702,16 @@ a:hover {
   height: 100%;
   top: 0px;
   z-index: -1;
-  opacity: .12;
+  opacity: .8;
   -webkit-transform: translateX(-42%) rotate(-90deg);
-          transform: translateX(-42%) rotate(-90deg);}
+          transform: translateX(-42%) rotate(-90deg);
+
+}
   
   .h-img {
   -webkit-transform: translate3d(-60%, 0, 0);
           transform: translate3d(-60%, 0, 0);
-  opacity: 0;
+  opacity: 0; 
 }
   
   #h-img-wrap-0 {
