--- a/src/static/style/css/app/page/_skylake.css
+++ b/src/static/style/css/app/page/_skylake.css
@@ -3460,8 +3460,8 @@ svg:not(:root) {
     position: absolute;
     bottom: 0;
     left: 14.5vw;
-    height: 13vh;
-    width: 21vw;
+    height: 18vh;
+    width: 26.3vw;
     background: rgba(27, 27, 27, 1);
     z-index: 0;
     transform: translate3d(0, 100%, 0);
@@ -3470,9 +3470,9 @@ svg:not(:root) {
 .h-pagi-prog-no-wrap {
   position: absolute;
   z-index: 0;
-  height: 100%;
+  height: 75%;
   width: 100%;
-  top: 8%;
+  top: 15%;
   left: 5%;
   /* text-align: center; */
   font-family: trump-gothic-pro;
@@ -3522,13 +3522,15 @@ svg:not(:root) {
   height: 100%;
   top: 0px;
   z-index: -1;
-  opacity: .12;
-  transform: translateX(-42%) rotate(-90deg);}
+  opacity: .8;
+  transform: translateX(-42%) rotate(-90deg);
+
+}
 
 
 .h-img {
   transform: translate3d(-60%, 0, 0);
-  opacity: 0;
+  opacity: 0; 
 }
 
 #h-img-wrap-0 {
