--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -1422,7 +1422,8 @@ a:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background: #fff;
+  /* background: #fff; */
+  background: #1e1e20;
   -webkit-transform: translate3d(0, -108%, 0);
           transform: translate3d(0, -108%, 0);
 }
@@ -4607,7 +4608,7 @@ a:hover {
     background: inherit;
     width: 8vw;
     height: 100vh;
-    z-index: -1;
+    z-index: 0;
     position: absolute;
     overflow: hidden; 
     -webkit-transform: translate3d(-100%, 0, 0); 
@@ -4628,7 +4629,7 @@ a:hover {
             box-shadow: inset 0 0 0 200px rgba(255,255,255,0.3);
     -webkit-filter: blur(10px);
             filter: blur(10px);
-    opacity: .5;
+    opacity: 1;
 
  }
   
@@ -4682,8 +4683,8 @@ a:hover {
   /* background: red; */
   background: -webkit-linear-gradient( 45deg, #0278d8, #ed0200, #ff096c, #ff1f44, #d50082 );
   width: 0;
-  -webkit-transition: width 0.5s;
-  transition: width 0.5s;
+  -webkit-transition: width 0.7s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: width 0.7s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
   
   .h-img-wrap {
@@ -4702,7 +4703,7 @@ a:hover {
   height: 100%;
   top: 0px;
   z-index: -1;
-  opacity: .8;
+  opacity: .4;
   -webkit-transform: translateX(-42%) rotate(-90deg);
           transform: translateX(-42%) rotate(-90deg);
 
