--- a/src/static/style/css/app/page/_skylake.css
+++ b/src/static/style/css/app/page/_skylake.css
@@ -495,7 +495,8 @@ svg:not(:root) {
   left: 0;
   right: 0;
   bottom: 0;
-  background: #fff;
+  /* background: #fff; */
+  background: #1e1e20;
   transform: translate3d(0, -108%, 0);
 }
 
@@ -3434,7 +3435,7 @@ svg:not(:root) {
     background: inherit;
     width: 8vw;
     height: 100vh;
-    z-index: -1;
+    z-index: 0;
     position: absolute;
     overflow: hidden; 
     transform: translate3d(-100%, 0, 0);
@@ -3452,7 +3453,7 @@ svg:not(:root) {
     bottom: 0;
     box-shadow: inset 0 0 0 200px rgba(255,255,255,0.3);
     filter: blur(10px);
-    opacity: .5;
+    opacity: 1;
 
  }
 
@@ -3503,7 +3504,7 @@ svg:not(:root) {
   /* background: red; */
   background: -webkit-linear-gradient( 45deg, #0278d8, #ed0200, #ff096c, #ff1f44, #d50082 );
   width: 0;
-  transition: width 0.5s;
+  transition: width 0.7s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .h-img-wrap {
@@ -3522,7 +3523,7 @@ svg:not(:root) {
   height: 100%;
   top: 0px;
   z-index: -1;
-  opacity: .8;
+  opacity: .4;
   transform: translateX(-42%) rotate(-90deg);
 
 }
